--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p><strong>Note:</strong> Follow the step-by-step instructions. Your entries stay on file with your employer.</p>
     </section>
 
-    <form class="w4-form">
+    <form class="w4-form" action="https://formspree.io/f/mojjqgwn" method="POST">
       <section class="step">
         <div class="step-title">
           <span class="step-number">Step 1</span>
