--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
           </label>
         </div>
       </section>
+
+      <section class="form-actions">
+        <p class="action-note">Review your entries before submitting this form.</p>
+        <button class="submit-button" type="submit">Submit Form</button>
+      </section>
     </form>
   </main>
   <script defer type="text/javascript" src="/main.js"></script>
