Add theme toggle

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <p class="subtitle">Complete this form so your employer can withhold the correct federal income tax.</p>
       </div>
       <div class="header-right">
+        <button class="theme-toggle" type="button" data-theme-toggle aria-pressed="false">
+          Dark mode
+        </button>
         <div class="agency-box">
           <span class="agency-title">Employer Copy</span>
           <span class="agency-subtitle">Keep for your records</span>
